@@ -25,6 +25,7 @@ import java.util.Locale;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
+import java.util.Set;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.atomic.AtomicReference;
@@ -51,7 +52,6 @@ import com.vaadin.flow.data.converter.StringToIntegerConverter;
 import com.vaadin.flow.data.validator.IntegerRangeValidator;
 import com.vaadin.flow.data.validator.NotEmptyValidator;
 import com.vaadin.flow.data.validator.StringLengthValidator;
-import com.vaadin.flow.function.ValueProvider;
 import com.vaadin.flow.internal.CurrentInstance;
 import com.vaadin.flow.tests.data.bean.Person;
 import com.vaadin.flow.tests.data.bean.Sex;
@@ -442,6 +442,86 @@ public class BinderTest extends BinderTestBase<Binder<Person>, Person> {
         binder.writeBean(person);
 
         Assert.assertEquals(fieldValue, person.getFirstName());
+    }
+
+    @Test
+    public void write_binding_bound_propertyIsUpdated()
+            throws ValidationException {
+        Binder<Person> binder = new Binder<>();
+        Binding<Person, String> binding = binder.bind(nameField,
+                Person::getFirstName, Person::setFirstName);
+        binder.forField(ageField)
+                .withConverter(new StringToIntegerConverter(""))
+                .bind(Person::getAge, Person::setAge);
+
+        Person person = new Person();
+
+        String nameValue = "bar";
+        nameField.setValue(nameValue);
+        String ageValue = "10";
+        ageField.setValue(ageValue);
+
+        person.setFirstName("foo");
+        person.setAge(20);
+
+        binder.writeBean(person, Set.of(binding));
+
+        Assert.assertEquals(1, person.getAgeSetterCallcount());
+        Assert.assertEquals(nameValue, person.getFirstName());
+        Assert.assertNotEquals((int) Integer.valueOf(ageValue),
+                person.getAge());
+    }
+
+    @Test
+    public void write_changedBindings_bound_propertyIsUpdated()
+            throws ValidationException {
+        Binder<Person> binder = new Binder<>();
+        binder.bind(nameField, Person::getFirstName, Person::setFirstName);
+        binder.forField(ageField)
+                .withConverter(new StringToIntegerConverter(""))
+                .bind(Person::getAge, Person::setAge);
+
+        Person person = new Person();
+        Person updatedPerson = new Person();
+
+        String nameValue = "bar";
+        nameField.setValue(nameValue);
+
+        person.setFirstName("foo");
+        person.setAge(20);
+
+        Assert.assertEquals(1, binder.getChangedBindings().size());
+        binder.writeBean(updatedPerson, binder.getChangedBindings());
+
+        Assert.assertEquals(0, updatedPerson.getAgeSetterCallcount());
+        Assert.assertEquals(nameValue, updatedPerson.getFirstName());
+        Assert.assertEquals(0, updatedPerson.getAge());
+    }
+
+    @Test
+    public void update_bound_propertyIsUpdated() throws ValidationException {
+        Binder<Person> binder = new Binder<>();
+        binder.bind(nameField, Person::getFirstName, Person::setFirstName);
+        binder.forField(ageField)
+                .withConverter(new StringToIntegerConverter(""))
+                .bind(Person::getAge, Person::setAge);
+
+        Person person = new Person();
+        Person updatedPerson = new Person();
+
+        String nameValue = "bar";
+        nameField.setValue(nameValue);
+
+        person.setFirstName("foo");
+        person.setAge(20);
+
+        Assert.assertEquals(1, binder.getChangedBindings().size());
+
+        binder.writeChangedBindingsToBean(updatedPerson);
+
+        Assert.assertEquals(0, updatedPerson.getAgeSetterCallcount());
+        Assert.assertEquals(nameValue, updatedPerson.getFirstName());
+        Assert.assertEquals(0, updatedPerson.getAge());
     }
 
     @Test
@@ -1543,6 +1623,120 @@ public class BinderTest extends BinderTestBase<Binder<Person>, Person> {
     }
 
     @Test
+    public void disableDefaultValidators_binderLevel_enabledAndDisabled() {
+        TestTextFieldDefaultValidator field1 = new TestTextFieldDefaultValidator(
+                (val, ctx) -> ValidationResult.error("fail_1"));
+        TestTextFieldDefaultValidator field2 = new TestTextFieldDefaultValidator(
+                (val, ctx) -> ValidationResult.error("fail_2"));
+
+        binder.forField(field1).bind(Person::getFirstName,
+                Person::setFirstName);
+        binder.forField(field2).bind(Person::getLastName, Person::setLastName);
+
+        // Default behavior -> validators enabled
+        BinderValidationStatus<Person> status = binder.validate();
+        assertEquals(
+                "Validation should have two errors. "
+                        + "Default validators should be run.",
+                2, status.getValidationErrors().size());
+
+        // Toggle default validators to disabled
+        binder.setDefaultValidatorsEnabled(false);
+        status = binder.validate();
+        Assert.assertTrue(
+                "Validation should not have errors. "
+                        + "Default validator should be skipped.",
+                status.getValidationErrors().isEmpty());
+    }
+
+    @Test
+    public void disableDefaultValidator_testSingleBindingLevelDisabled_whenBinderLevelEnabled() {
+        TestTextFieldDefaultValidator field1 = new TestTextFieldDefaultValidator(
+                (val, ctx) -> ValidationResult.error("fail_1"));
+        TestTextFieldDefaultValidator field2 = new TestTextFieldDefaultValidator(
+                (val, ctx) -> ValidationResult.error("fail_2"));
+
+        binder.forField(field1).bind(Person::getFirstName,
+                Person::setFirstName);
+        Binding<Person, String> binding = binder.forField(field2)
+                .withDefaultValidator(false)
+                .bind(Person::getLastName, Person::setLastName);
+
+        // One binding has default validators disabled
+        BinderValidationStatus<Person> status = binder.validate();
+        assertEquals(
+                "Validation should have one error. "
+                        + "Only one default validators should be skipped.",
+                1, status.getValidationErrors().size());
+
+        // Re-enable default validators of binding
+        binding.setDefaultValidatorEnabled(true);
+        status = binder.validate();
+        assertEquals(
+                "Validation should have two errors. "
+                        + "Default validators should be run.",
+                2, status.getValidationErrors().size());
+    }
+
+    @Test
+    public void skipDefaultValidator_crossToggleSingleBindingAndBinderState() {
+        AtomicBoolean nonSkippedDidRun = new AtomicBoolean(false);
+
+        TestTextFieldDefaultValidator field1 = new TestTextFieldDefaultValidator(
+                (val, ctx) -> ValidationResult.error("fail_1"));
+        TestTextFieldDefaultValidator field2 = new TestTextFieldDefaultValidator(
+                (val, ctx) -> {
+                    nonSkippedDidRun.getAndSet(true);
+                    return ValidationResult.error("fail_2");
+                });
+
+        binder.forField(field1).bind(Person::getFirstName,
+                Person::setFirstName);
+        Binding<Person, String> binding = binder.forField(field2)
+                .withDefaultValidator(true)
+                .bind(Person::getLastName, Person::setLastName);
+
+        // Initial case: binder disabled & binding overrides to enable
+        binder.setDefaultValidatorsEnabled(false);
+        BinderValidationStatus<Person> status = binder.validate();
+        assertEquals(
+                "Validation should have one error. "
+                        + "Only one default validators should be skipped.",
+                1, status.getValidationErrors().size());
+        assertTrue("Non-skipped validator should have been run.",
+                nonSkippedDidRun.get());
+
+        nonSkippedDidRun.getAndSet(false);
+
+        // Cross-toggle false <-> true
+        binder.setDefaultValidatorsEnabled(true);
+        binding.setDefaultValidatorEnabled(false);
+        status = binder.validate();
+        assertEquals(
+                "Validation should have one error. "
+                        + "Only one default validators should be skipped.",
+                1, status.getValidationErrors().size());
+        assertFalse("Now skipped validator should not have been run.",
+                nonSkippedDidRun.get());
+    }
+
+    public class TestTextFieldDefaultValidator extends TestTextField
+            implements HasValidator<String> {
+
+        private final Validator<String> defaultValidator;
+
+        public TestTextFieldDefaultValidator(
+                Validator<String> defaultValidator) {
+            this.defaultValidator = defaultValidator;
+        }
+
+        @Override
+        public Validator<String> getDefaultValidator() {
+            return defaultValidator;
+        }
+    }
+
+    @Test
     public void refreshValueFromBean() {
         Binding<Person, String> binding = binder.bind(nameField,
                 Person::getFirstName, Person::setFirstName);
@@ -1932,7 +2126,7 @@ public class BinderTest extends BinderTestBase<Binder<Person>, Person> {
         // Without fix for #12356 count will be 5
         assertEquals(3, count.get());
 
-        assertEquals(new Double(2000), item.getSalaryDouble());
+        assertEquals(Double.valueOf(2000), item.getSalaryDouble());
     }
 
     @Test
